@@ -87,3 +87,8 @@ border-radius:5px;
 opacity:0.75;
 filter:alpha(opacity=75); /* For IE8 and earlier */
 }
+
+.progressmaskopaque{
+opacity:1 !important;
+filter:alpha(opacity=100) !important; /* For IE8 and earlier */
+}
