@@ -1,4 +1,10 @@
 ==================================
+Rilascio v2.0.10    del 04/06/2017
+==================================
+
+Ego: aggiunta la funzione egoautomatic(u, p) per il collegamento da app.
+
+==================================
 Rilascio v2.0.9     del 02/06/2017
 ==================================
 
